@@ -113,7 +113,7 @@ public class TiledCollisionMapper<T extends Positionable> {
 	 *            drawn in the layer is treated as a collision.
 	 */
 	public void mapCollisionsByLayer(QuadTree<T> quadTree, TiledMap tiledMap, int layerIndex) {
-		if(layerIndex < 0) {
+		if (layerIndex < 0) {
 			return;
 		}
 		TileLayer layer = tiledMap.getTileLayer(layerIndex);
@@ -127,7 +127,7 @@ public class TiledCollisionMapper<T extends Positionable> {
 			}
 		}
 	}
-	
+
 	/**
 	 * Extracts collisions in a {@link TiledMap} layer and adds them to a
 	 * {@link List} instance
@@ -141,7 +141,7 @@ public class TiledCollisionMapper<T extends Positionable> {
 	 *            drawn in the layer is treated as a collision.
 	 */
 	public void mapCollisionsByLayer(List<T> results, TiledMap tiledMap, int layerIndex) {
-		if(layerIndex < 0) {
+		if (layerIndex < 0) {
 			return;
 		}
 		TileLayer layer = tiledMap.getTileLayer(layerIndex);
@@ -171,7 +171,7 @@ public class TiledCollisionMapper<T extends Positionable> {
 	public void mapCollisionsByLayer(QuadTree<T> quadTree, TiledMap tiledMap, String layerName) {
 		mapCollisionsByLayer(quadTree, tiledMap, tiledMap.getLayerIndex(layerName));
 	}
-	
+
 	/**
 	 * Extracts collisions in a {@link TiledMap} layer and adds them to a
 	 * {@link List} instance
@@ -202,7 +202,7 @@ public class TiledCollisionMapper<T extends Positionable> {
 	 */
 	public void mapCollisionsByObjectGroup(QuadTree<T> quadTree, TiledMap tiledMap, String groupName) {
 		TiledObjectGroup objectGroup = tiledMap.getObjectGroup(groupName);
-		if(objectGroup == null) {
+		if (objectGroup == null) {
 			return;
 		}
 
@@ -210,7 +210,40 @@ public class TiledCollisionMapper<T extends Positionable> {
 			quadTree.add(collisionFactory.createCollision(tiledObject));
 		}
 	}
-	
+
+	/**
+	 * Extracts collisions in a {@link TiledMap} object group that have a
+	 * specific value in their type field and adds them to a {@link QuadTree}
+	 * instance
+	 * 
+	 * @param quadTree
+	 *            The {@link QuadTree} instance to add collisions to
+	 * @param tiledMap
+	 *            The {@link TiledMap} to extract collisions from
+	 * @param groupName
+	 *            The name of the object group to extract collisions from. Each
+	 *            object is treated as a collision.
+	 * @param objectType
+	 *            The object type to extract
+	 */
+	public void mapCollisionsByObjectGroup(QuadTree<T> quadTree, TiledMap tiledMap, String groupName,
+			String objectType) {
+		TiledObjectGroup objectGroup = tiledMap.getObjectGroup(groupName);
+		if (objectGroup == null) {
+			return;
+		}
+
+		for (TiledObject tiledObject : objectGroup.getObjects()) {
+			if (tiledObject.getType() == null) {
+				continue;
+			}
+			if (!tiledObject.getType().equalsIgnoreCase(objectType)) {
+				continue;
+			}
+			quadTree.add(collisionFactory.createCollision(tiledObject));
+		}
+	}
+
 	/**
 	 * Extracts collisions in a {@link TiledMap} object group and adds them to a
 	 * {@link List} instance
@@ -225,7 +258,7 @@ public class TiledCollisionMapper<T extends Positionable> {
 	 */
 	public void mapCollisionsByObjectGroup(List<T> results, TiledMap tiledMap, String groupName) {
 		TiledObjectGroup objectGroup = tiledMap.getObjectGroup(groupName);
-		if(objectGroup == null) {
+		if (objectGroup == null) {
 			return;
 		}
 
@@ -235,9 +268,42 @@ public class TiledCollisionMapper<T extends Positionable> {
 	}
 
 	/**
+	 * Extracts collisions in a {@link TiledMap} object group that have a
+	 * specific value in their type field and adds them to a {@link List}
+	 * instance
+	 * 
+	 * @param results
+	 *            The {@link List} instance to add collisions to
+	 * @param tiledMap
+	 *            The {@link TiledMap} to extract collisions from
+	 * @param groupName
+	 *            The name of the object group to extract collisions from. Each
+	 *            object is treated as a collision.
+	 * @param objectType
+	 *            The object type to extract
+	 */
+	public void mapCollisionsByObjectGroup(List<T> results, TiledMap tiledMap, String groupName, String objectType) {
+		TiledObjectGroup objectGroup = tiledMap.getObjectGroup(groupName);
+		if (objectGroup == null) {
+			return;
+		}
+
+		for (TiledObject tiledObject : objectGroup.getObjects()) {
+			if (tiledObject.getType() == null) {
+				continue;
+			}
+			if (!tiledObject.getType().equalsIgnoreCase(objectType)) {
+				continue;
+			}
+			results.add(collisionFactory.createCollision(tiledObject));
+		}
+	}
+
+	/**
 	 * Extracts and merges collisions in a {@link TiledMap} layer and adds them
 	 * to a {@link QuadTree} instance. Tiles are determined as mergeable by the
-	 * {@link TiledCollisionMerger} instance associated with this {@link TiledCollisionMapper}.
+	 * {@link TiledCollisionMerger} instance associated with this
+	 * {@link TiledCollisionMapper}.
 	 * 
 	 * @param quadTree
 	 *            The {@link QuadTree} instance to add collisions to
@@ -254,7 +320,8 @@ public class TiledCollisionMapper<T extends Positionable> {
 	/**
 	 * Extracts and merges collisions in a {@link TiledMap} layer and adds them
 	 * to a {@link QuadTree} instance. Tiles are determined as mergeable by the
-	 * {@link TiledCollisionMerger} instance associated with this {@link TiledCollisionMapper}.
+	 * {@link TiledCollisionMerger} instance associated with this
+	 * {@link TiledCollisionMapper}.
 	 * 
 	 * @param quadTree
 	 *            The {@link QuadTree} instance to add collisions to
@@ -265,10 +332,10 @@ public class TiledCollisionMapper<T extends Positionable> {
 	 *            drawn in the layer is treated as a collision.
 	 */
 	public void mapAndMergeCollisionsByLayer(QuadTree<T> quadTree, TiledMap tiledMap, int layerIndex) {
-		if(layerIndex < 0) {
+		if (layerIndex < 0) {
 			return;
 		}
-		
+
 		TileLayer layer = tiledMap.getTileLayer(layerIndex);
 		byte[][] collisions = mapCollisionsByLayer(tiledMap, layer);
 
@@ -281,11 +348,12 @@ public class TiledCollisionMapper<T extends Positionable> {
 			}
 		}
 	}
-	
+
 	/**
 	 * Extracts and merges collisions in a {@link TiledMap} layer and adds them
 	 * to a {@link List} instance. Tiles are determined as mergeable by the
-	 * {@link TiledCollisionMerger} instance associated with this {@link TiledCollisionMapper}.
+	 * {@link TiledCollisionMerger} instance associated with this
+	 * {@link TiledCollisionMapper}.
 	 * 
 	 * @param results
 	 *            The {@link List} instance to add collisions to
@@ -298,11 +366,12 @@ public class TiledCollisionMapper<T extends Positionable> {
 	public void mapAndMergeCollisionsByLayer(List<T> results, TiledMap tiledMap, String layerName) {
 		mapAndMergeCollisionsByLayer(results, tiledMap, tiledMap.getLayerIndex(layerName));
 	}
-	
+
 	/**
 	 * Extracts and merges collisions in a {@link TiledMap} layer and adds them
 	 * to a {@link List} instance. Tiles are determined as mergeable by the
-	 * {@link TiledCollisionMerger} instance associated with this {@link TiledCollisionMapper}.
+	 * {@link TiledCollisionMerger} instance associated with this
+	 * {@link TiledCollisionMapper}.
 	 * 
 	 * @param results
 	 *            The {@link List} instance to add collisions to
@@ -313,10 +382,10 @@ public class TiledCollisionMapper<T extends Positionable> {
 	 *            drawn in the layer is treated as a collision.
 	 */
 	public void mapAndMergeCollisionsByLayer(List<T> results, TiledMap tiledMap, int layerIndex) {
-		if(layerIndex < 0) {
+		if (layerIndex < 0) {
 			return;
 		}
-		
+
 		TileLayer layer = tiledMap.getTileLayer(layerIndex);
 		byte[][] collisions = mapCollisionsByLayer(tiledMap, layer);
 
