@@ -94,6 +94,22 @@ public class TiledCollisionMapperTest {
 				tiledMap.getHeight() * tiledMap.getTileHeight());
 
 		List<CollisionBox> collisions = quadTree.getElementsWithinArea(area);
+		Assert.assertEquals(2, collisions.size());
+		Assert.assertEquals(32f, collisions.get(0).getX());
+		Assert.assertEquals(64f, collisions.get(0).getY());
+		Assert.assertEquals(16f, collisions.get(0).getWidth());
+		Assert.assertEquals(24f, collisions.get(0).getHeight());
+	}
+	
+	@Test
+	public void testMapCollisionsByObjectGroupAndType() {
+		QuadTree<CollisionBox> quadTree = new PointQuadTree<CollisionBox>(8, 0f, 0f,
+				tiledMap.getWidth() * tiledMap.getTileWidth(), tiledMap.getHeight() * tiledMap.getTileHeight());
+		collisionBoxMapper.mapCollisionsByObjectGroup(quadTree, tiledMap, "Objects", "expected");
+		Rectangle area = new Rectangle(0f, 0f, tiledMap.getWidth() * tiledMap.getTileWidth(),
+				tiledMap.getHeight() * tiledMap.getTileHeight());
+
+		List<CollisionBox> collisions = quadTree.getElementsWithinArea(area);
 		Assert.assertEquals(1, collisions.size());
 		Assert.assertEquals(32f, collisions.get(0).getX());
 		Assert.assertEquals(64f, collisions.get(0).getY());
